updated the backend

--- a/Backend/src/SalonHub.Web.Host/appsettings.json
+++ b/Backend/src/SalonHub.Web.Host/appsettings.json
@@ -5,12 +5,12 @@
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
     "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "https://salonHub.vercel.app,http://localhost:3000,http://localhost:3001"
+    "CorsOrigins": "https://salonHub.vercel.app,http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,http://localhost:3001"
   },
   "Authentication": {
     "JwtBearer": {
       "IsEnabled": "true",
-      "SecurityKey": "SalonHub_4B8FCD98B05745259061B10D5C54895F",
+      "SecurityKey": "SalonHub_AE251A3DCD3D44F7932FA92C92B2E07C",
       "Issuer": "SalonHub",
       "Audience": "SalonHub"
     }
@@ -18,7 +18,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://0.0.0.0:10000"
+        "Url": "https://0.0.0.0:10000"
       }
     }
   },
@@ -34,9 +34,8 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "SendGrid": {
-    "FromEmail": "potholiodemo@gmail.com",
-    "FromName": "SalonHub"
+    "SendGrid": {
+      "FromEmail": "potholiodemo@gmail.com",
+      "FromName": "SalonHub"
+    }
   }
-
-}
