--- a/Backend/src/SalonHub.Web.Host/appsettings.json
+++ b/Backend/src/SalonHub.Web.Host/appsettings.json
@@ -5,7 +5,7 @@
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
     "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "https://salonHub.vercel.app,http://salon-hub-nu.vercel.app,http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,http://localhost:3001"
+    "CorsOrigins": "https://salonHub.vercel.app,https://salon-hub-nu.vercel.app,http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,http://localhost:3001"
   },
   "Authentication": {
     "JwtBearer": {
